fix: code block font size too small

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -133,6 +133,7 @@ a {
 
 tt, code, kbd, samp, pre {
   font-family: $monospace;
+  font-size: 2em;
 }
 
 pre {
